WiFi/TinyGSM testing

--- a/a/tu_xx01/platformio.ini
+++ b/a/tu_xx01/platformio.ini
@@ -20,7 +20,7 @@ default_envs = mayfly
 lib_ignore = .git, doc, examples, arduino_update, sensor_tests, ModularSensors
     EnviroDIY_DS3231
     SDI-12 
-    https://github.com/EnviroDIY/TinyGSM.git   ;see below
+    TinyGSM.git   ;see below
 
 lib_cmn_deps =
     ; These are latest beyond EnviroDIY releases
