--- a/examples/tu_xx01/platformio.ini
+++ b/examples/tu_xx01/platformio.ini
@@ -83,7 +83,7 @@ cmn_build_flags =
     ;-DMS_TU_XX_DEBUG
     ;-DMS_TU_XX_DEBUG_DEEP
     ;-DSTREAMDEBUGGER_DBG
-    ;-DMS_LOGGERBASE_POSTS
+    -DMS_LOGGERBASE_POSTS
     ;-DMS_LOGGERBASE_SLEEP_DEBUG ;Need or below
     ;-DMS_LOGGERBASE_DEBUG
     ;-DMS_LOGGERBASE_DEEP_DEBUG
