--- a/a/tu_xx01/platformio.ini
+++ b/a/tu_xx01/platformio.ini
@@ -107,7 +107,7 @@ cmn_build_flags =
     ;-DMS_UBIDOTSPUBLISHER_DEBUG
     ;-DMS_DIGIXBEEWIFI_DEBUG
     ;-DMS_DIGIXBEEWIFI_DEBUG_DEEP
-    ;-DMS_DIGIXBEECELLULARTRANSPARENT_DEBUG
+    -DMS_DIGIXBEECELLULARTRANSPARENT_DEBUG
     ;-DMS_DIGIXBEECELLULARTRANSPARENT_DEBUG_DEEP
     ;-DMS_DIGIXBEE_DEBUG
     ;-DTINY_GSM_DEBUG=Serial
